NEWS file for bayesGDS package


VERSION 0.6.1 (development)

-   Added devtools infrastructure.

-   Documentation now created using roxygen2

-   All new vignettes

-   New CITATION information


VERSION 0.6.0 (December 13, 2013) [first entry in NEWS file]

-   This is a complete reworking of the package, with new function names
    and arguments. The function for the rejection sampling phase is now
    sample.GDS. Function arguments have changed. Altogether, the
    sample.GDS phase should run much more efficiently than previous
    versions.

-   The dependency to Rmfpr has been removed.

-   An updated version of Braun and Damien (2013) is available in the
    /doc folder of the package.

