@@ -1,21 +1,13 @@
 ## Test environments
-* local OS X install, R 3.1.2
-* ubuntu 12.04 (on travis-ci), R 3.1.2
-* win-builder (devel and release)
+* local OS X install, R-3.1.2 and R-3.2.0 alpha
+* win-builder, R-devel and R-3.1.3
 
 ## R CMD check results
-There were no ERRORs or WARNINGs. 
+There were no ERRORs or WARNINGs.   The only NOTEs are references to
+my status as a Maintainer
 
-There was 1 NOTE:
+## Vignettes
+Can you please confirm that CRAN recognizes three
+vignettes for this package?  I have had some difficulty getting pre-built vignettes to appear in
+the index using knitr, so I am trying R.rsp for the first time.
 
-* checking dependencies in R code ... NOTE
-  Namespace in Imports field not imported from: 'R6'
-
-  R6 is a build-time dependency.
-
-## Downstream dependencies
-I have also run R CMD check on downstream dependencies of httr 
-(https://github.com/wch/checkresults/blob/master/httr/r-release). All packages 
-that I could install passed except:
-
-* XYZ:...
