@@ -69,7 +69,7 @@
                         firstinits=false
 			]{biblatex}
 
- \addbibresource{../../vignettes/bayesGDS.bib}
+ \addbibresource{../bayesGDS.bib}
 
  \setlength{\bibitemsep}{1em}
 \AtEveryCitekey{\ifciteseen{}{\defcounter{maxnames}{2}}}
