@@ -10,9 +10,14 @@
 Braun and Damien Algorithm for Scalable Rejection Sampling
 }
 \details{
-This package provides helper functions for implementing the
-Braun and Damien Scalable Rejection Sampling algorthm (see
-references).
+Functions for implementing the Braun and Damien (BD)
+Scalable Rejection Sampling algorthm
+}
+\references{
+Braun, Michael and Paul Damien (2015).  Scalable Rejection
+Sampling for Bayesian Hierarchical Models. Marketing
+Science. Articles in Advance.
+http://doi.org/10.1287/mksc.2014.0901
 }
 \keyword{package}
 
