@@ -7,9 +7,10 @@ VERSION 0.6.1 (development)
 
 -   Documentation now created using roxygen2
 
--   All new vignettes
+-   All new vignettes.  Vignettes were pre-built; sources are in
+    inst/vignette_sources.
 
--   New CITATION information
+-   New CITATION information.
 
 
 VERSION 0.6.0 (December 13, 2013) [first entry in NEWS file]
